# llms-from-scratch

./: README.md  pyproject.toml
.github/workflows/: unit-tests.yml
archs/: transformer.py
src/data/: dataloader.py  vocab.py
tests/: test_dataset.py  test_transformer.py
