[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-from-scratch"
version = "0.0.1"
description = "LLMs from scratch"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "archs*"]
exclude = ["tests*"]
